# ChEmbed-Res

./: .env.example  .gitignore  ChEmbedWrapper.py  README.md  check_status.py  chemrxiv_bench.py  install.sh  nomic_bench.py  pyproject.toml  wrapper.py
artifacts/: benchmark_tasks_map.json  generate_figure2.py  generate_table3.py  generate_table4.py  generate_table5.py  generate_table6.py  models_metadata.json  table3.tex  table4.tex  table5.tex  table6.tex
models/: ChEmbed.json  models.json
results/chemrxiv/results/Alibaba-NLP__gte-multilingual-base/ca1791e0bcc104f6db161f27de1340241b13c5a4/: ChemRxivRetrieval.json  model_meta.json
results/chemrxiv/results/BAAI__bge-base-en-v1.5/a5beb1e3e68b9ab74eb54cfd186867f64f240e1a/: ChemRxivRetrieval.json  model_meta.json
results/chemrxiv/results/BAAI__bge-base-en/b737bf5dcc6ee8bdc530531266b4804a5d77b5d8/: ChemRxivRetrieval.json  model_meta.json
results/chemrxiv/results/BAAI__bge-large-en-v1.5/d4aa6901d3a41ba39fb536a557fa166f842b0e09/: ChemRxivRetrieval.json  model_meta.json
results/chemrxiv/results/BAAI__bge-large-en/abe7d9d814b775ca171121fb03f394dc42974275/: ChemRxivRetrieval.json  model_meta.json
results/chemrxiv/results/BAAI__bge-m3/5617a9f61b028005a4858fdac845db406aefb181/: ChemRxivRetrieval.json  model_meta.json
results/chemrxiv/results/BAAI__bge-small-en-v1.5/5c38ec7c405ec4b44b94cc5a9bb96e735b38267a/: ChemRxivRetrieval.json  model_meta.json
results/chemrxiv/results/BAAI__bge-small-en/2275a7bdee235e9b4f01fa73aa60d3311983cfea/: ChemRxivRetrieval.json  model_meta.json
(+795 files in other folders)
